# sammy_ws

./: README.md
install/: local_setup.sh  setup.sh
install/sammy_sim/lib/sammy_sim/: json_joint_publisher.py  move_joints.py
install/sammy_sim/share/sammy_sim/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sammy_sim/share/sammy_sim/launch/: robot_description.launch.py
install/sammy_sim/share/sammy_sim/meshes/: MG996R v1 (1) (1).stl  base_link_1.stl  chest_bend_servo_1_Servo_9.stl  chest_flat_back_link_1.stl  chest_tilt_servo_1.stl  chest_tilt_servo_1_Servo_8.stl  eye_holder_1.stl  head_connector_link_1_HeadConnector_0.stl  head_nod_servo_1.stl  head_shell_1_Body1_0.stl  head_shell_1_Body1_1.stl  head_shell_1_Body1_2.stl  head_shell_1_Body1_3.stl  head_shell_1_Body1_4.stl  head_shell_1_Body1_5.stl  head_shell_1_Body1_6.stl  head_shell_1_Body1_7.stl  head_shell_1_Body1_8.stl  head_shell_1_Body1_9.stl  head_shell_1_Body2_0.stl  head_shell_1_Body2_1.stl  head_shell_1_Body2_2.stl  head_shell_1_Body2_3.stl  (+45 more)
log/: latest_build
sammy_sim/: CMakeLists.txt  README.md  setup.cfg  setup.py
sammy_sim/launch/: display.launch.py
sammy_sim/meshes/: head_shell_1.stl  left_chest_servo_1.stl  left_foot_link_1.stl  left_hip_servo_1.stl  left_shoulder_link_1.stl  neck_link_1.stl  right_ankle_servo_1.stl  right_elbow_servo_1.stl  right_forearm_link_1.stl  right_forearm_servo_1.stl  right_hand_link_1.stl  right_knee_Servo_1.stl
sammy_sim/motion/: left_wave.json
sammy_sim/urdf/: materials.xacro  sammy.gazebo  sammy.trans
(+12 files in other folders)
